// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table component renders 1`] = `
<div>
  <table
    class="c-kaWNwR c-kaWNwR-iXGfYx-size-md c-kaWNwR-iliYStP-css"
  >
    <thead
      class="c-PJLV"
    >
      <tr
        class="c-PJLV"
      >
        <th
          class="c-ibRpnJ"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV"
    >
      <tr
        class="c-PJLV"
      >
        <td
          class="c-huaDro"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c-PJLV"
    >
      <tr
        class="c-PJLV"
      >
        <td
          class="c-huaDro"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Table component renders with size set to lg 1`] = `
<div>
  <table
    class="c-kaWNwR c-kaWNwR-hlPgvk-size-lg c-kaWNwR-iliYStP-css"
  >
    <thead
      class="c-PJLV"
    >
      <tr
        class="c-PJLV"
      >
        <th
          class="c-ibRpnJ"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV"
    >
      <tr
        class="c-PJLV"
      >
        <td
          class="c-huaDro"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c-PJLV"
    >
      <tr
        class="c-PJLV"
      >
        <td
          class="c-huaDro"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;
